

Project sageteam {
    database_type : 'PostgreSQL'
    Note : 'IT agency'
}

Table Product as p {
    id int [
        pk,
        unique,
        not null,
        increment,
        note : 'primary key'
        ]
    title varchar(110) [
        unique,
        not null

    ]    

    price int []

    category int [ref: > C.id]

    Note : 'this table hold productions of chochol'
}




Table Category as C {
    id int [
        pk,
        unique,
        not null,
        increment,
        note : 'primary key'
        ]
    title varchar(110) [
        unique,
        not null

    ]    

    price int []
}







Table Service as S {
    id int [pk,increment]
    title varchar(100) [unique,not null]    
    summary varchar(200) [unique,not null] 
    description text[unique,not null] 
    icon varchar(50) [unique,not null] 
    image image [unique,not null] 
    banner image [unique,not null]
    created timestamptz [not null]
    modified timestamptz [not null]

    

    Note : 'this table hold productions of chochol'
}


Table ServiceAttachment as B {
    id int [pk,increment]
    title varchar(100) [unique,not null]    
    attachment file [not null]
    service int [ref: S.id]
    created timestamptz [not null]
    modified timestamptz [not null]

    

    Note : 'this table hold productions of hahaha'
}


Table PopularService as PS {
    id int [pk,increment]
    service int [ref: S.id]
    created timestamptz [not null]
    modified timestamptz [not null]

    

    Note : 'this table hold productions of hohoho'
}




Table Post as P {
    id int [pk,increment]
    title varchar(100) [unique,not null]    
    summary varchar(200) [unique,not null] 
    description text[unique,not null] 
    priority int [unique] 
    image image [unique,not null] 
    created timestamptz [not null]
    modified timestamptz [not null]

    

    Note : 'this table hold productions of kakol'
}


Table Category as C {
    id int [pk,increment]
    title varchar(110) [unique,not null]    
    post int [ref: > P.id]
    created timestamptz [not null]
    modified timestamptz [not null]
    
}



Table Tag as T {
    id int [pk,increment]
    title varchar(110) [unique,not null]    
    created timestamptz [not null]
    modified timestamptz [not null]
    
}


Table PostTag as PT {
    id int [pk,increment]
    post int [ref: > P.id]
    tag int [ref: > T.id]
    
    
}


Table User as U {
    id int [pk,increment]
    username varchar(100) 
    password varchar(100) 
}


Table UserProfile as UP {
    id int [pk,increment]
    avatar image [not null] 
    first_name varchar(100) 
    last_name varchar(100) 
    national_code varchar(100) 
    bith_date timestamp 
    user int [ref: > U.id]

    

    
}



Table Comment as CM {
    id int [pk,increment]
    post int [ref: > P.id]
    user int [ref: > U.id]
    parent int [ref: > CM.id]
    is_confirmed bool [default :false]
    message text[not null] 
    created timestamptz [not null]
    modified timestamptz [not null]
}



